app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://arch.homework/api/v1/user/auth/"
    nginx.ingress.kubernetes.io/auth-signin: "http://arch.homework/login"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-userid,x-username,x-email,x-first-name,x-last-name"
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /api/v1/user/me/
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 8000
